@@ -135,7 +135,9 @@ enum gcry_ctl_cmds {
     GCRYCTL_IS_ALGO_ENABLED     = 35,
     GCRYCTL_DISABLE_INTERNAL_LOCKING = 36,
     GCRYCTL_DISABLE_SECMEM      = 37,
-    GCRYCTL_INITIALIZATION_FINISHED = 38
+    GCRYCTL_INITIALIZATION_FINISHED = 38,
+    GCRYCTL_INITIALIZATION_FINISHED_P = 39,
+    GCRYCTL_ANY_INITIALIZATION_P = 40
 };
 
 int gcry_control( enum gcry_ctl_cmds, ... );
