@@ -11,6 +11,8 @@ Noteworthy changes in version (current cvs)
 GCRYCTL_DISABLE_INTERNAL_LOCKING  NEW
 GCRYCTL_DISABLE_SECMEM            NEW
 GCRYCTL_INITIALIZATION_FINISHED   NEW
+GCRYCTL_INITIALIZATION_FINISHED_P NEW
+GCRYCTL_ANY_INITIALIZATION_P      NEW
 gcry_strdup                       NEW
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
